// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`not() success 1`] = `
[
  [
    true,
    {
      "kind": "word",
      "span": [
        0,
        3,
      ],
      "text": "foo",
    },
  ],
  [
    true,
    {
      "kind": "word",
      "span": [
        4,
        7,
      ],
      "text": "bar",
    },
  ],
]
`;

exports[`opt() makes failing match ok 1`] = `
{
  "tags": {},
  "value": [
    undefined,
    "foo",
  ],
}
`;

exports[`seq() handles two element match 1`] = `
{
  "tags": {},
  "value": [
    "#import",
    "foo",
  ],
}
`;

exports[`tracing 1`] = `
"..repeat
  ..wordz
    ..seq
      : 'a' (word)
      a   Ln 1
      ^
      ✓ kind 'word'
    ✓ seq
  ✓ wordz
  ..wordz
    ..seq
      x kind 'word'
    x seq
  x wordz
✓ repeat"
`;
